fixed z-index

--- a/src/components/Filters/Filters.module.css
+++ b/src/components/Filters/Filters.module.css
@@ -5,7 +5,7 @@
     bottom: 0px;
     width: 100vw;
     max-height: 80vh;
-    z-index: 3;
+    z-index: 6;
     background-color: rgb(255, 255, 255);
     padding: 20px 24px;
     border-radius: 20px;
